Closed
Bug 1456166
Opened 3 years ago
Closed 3 years ago
###!!! ASSERTION: bad aListVisibleBounds: 'r.GetBounds().IsEqualInterior(aListVisibleBounds)', file /builds/worker/workspace/build/src/layout/painting/nsDisplayList.cpp, line 2405
Categories
(Core :: Web Painting, defect)
Core
Web Painting
Tracking
()
RESOLVED
FIXED
mozilla61
Tracking | Status | |
---|---|---|
firefox61 | --- | fixed |
People
(Reporter: mats, Assigned: mats)
References
(Blocks 2 open bugs)
Details
Attachments
(1 file)
1.18 KB,
patch
|
mattwoodrow
:
review+
|
Details | Diff | Splinter Review |
With the patches in bug 1398482 the devtools test devtools/client/inspector/rules/test/browser_rules_gridline-names-autocomplete.js is hitting this assertion. Here's the log with a stack trace: https://treeherder.mozilla.org/logviewer.html#?job_id=175130132&repo=try&lineNumber=4116 This prevents me from landing bug 1398482, which is needed for other stuff (e.g. subgrid).
Assignee | ||
Comment 1•3 years ago
|
||
Assignee: nobody → mats
Attachment #8970240 -
Flags: review?(matt.woodrow)
Assignee | ||
Updated•3 years ago
|
Comment 2•3 years ago
|
||
Comment on attachment 8970240 [details] [diff] [review] Downgrade a non-essential assertion to a warning for now because it keeps failing. Review of attachment 8970240 [details] [diff] [review]: ----------------------------------------------------------------- Do you have any idea why we're hitting this assertion? It seems like a real concern, we should try fix the underlying cause.
Attachment #8970240 -
Flags: review?(matt.woodrow) → review+
Pushed by mpalmgren@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/c8375fd14860 Downgrade a non-essential assertion to a warning for now because it keeps failing. r=mattwoodrow
Assignee | ||
Comment 4•3 years ago
|
||
I just added a CSS property named "gap", which made the auto-completion popup menu in devtools for "g" slightly longer. I have no clue why that would trigger this assertion.
Comment 5•3 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/c8375fd14860
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla61
Assignee | ||
Comment 6•3 years ago
|
||
(In reply to Matt Woodrow (:mattwoodrow) from comment #2) > Do you have any idea why we're hitting this assertion? It seems like a real > concern, we should try fix the underlying cause. FYI, it should be really easy to reproduce this assertion. It occurred on all platforms on Try, IIRC. It certainly was 100% reproducible in a Linux debug build.
You need to log in
before you can comment on or make changes to this bug.
Description
•