Bug 1456166 - Downgrade a non-essential assertion to a warning for now because it keeps failing.  r=mattwoodrow